@@ -1,3 +1,8 @@
+2017-04-26 Riccardo Mottola <rm@gnu.org>
+
+	* DBSObject.m
+	Minor change to NSUInteger
+
 2016-11-23 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoapCSV.m (queryIdentify:)
